feat: Not found style

--- a/src/app/areas/not-found/not-found.component.html
+++ b/src/app/areas/not-found/not-found.component.html
@@ -1,6 +1,9 @@
 <div class="text-center">
 	<h1>404</h1>
-	<p>Sorry the page you are looking for cannot be found.</p>
-	<i class="fa fa-blind fa-5x"
-	 aria-hidden="true"></i>
+	<p><strong>Sorry!</strong> The page you are looking for cannot be found.</p>
+	<i class="fa fa-blind fa-5x" aria-hidden="true"></i>
+	<br />
+	<a routerLink=""><button class="btn btn-outline-info my-2 my-sm-0">
+			Home
+		</button></a>
 </div>
