feat: Error style

--- a/src/app/areas/error/error.component.html
+++ b/src/app/areas/error/error.component.html
@@ -5,4 +5,8 @@
 		again.
 	</p>
 	<i class="fa fa-meh-o fa-5x" aria-hidden="true"></i>
+	<br />
+	<a routerLink=""><button class="btn btn-outline-info my-2 my-sm-0">
+		Home
+	</button></a>
 </div>
