feat: Add all routes

--- a/src/app/areas/home/home.component.html
+++ b/src/app/areas/home/home.component.html
@@ -3,4 +3,4 @@
 </h1>
 <p>Welcome to my angular project</p>
 
-<p>See all the articles <a routerLink="/articles">here</a></p>
+<p>See all the articles <a routerLink="/article/list">here</a></p>
