--- a/src/app/areas/nav/nav.component.scss
+++ b/src/app/areas/nav/nav.component.scss
@@ -18,3 +18,7 @@ $nav-bg-color: rgba($cod-gray, 0.75) !default;
 	color: $text-diffuse-color;
 	font-size: $font-size-xxs;
 }
+
+a {
+	padding: 0 5px;
+}
