--- a/src/app/areas/nav/nav.component.html
+++ b/src/app/areas/nav/nav.component.html
@@ -33,13 +33,20 @@
 				</a>
 			</li>
 		</ul>
-		<!-- <form class="form-inline my-2 my-lg-0">
-			<input class="form-control mr-sm-2"
-			 type="text"
-			 placeholder="Search"
-			 aria-label="Search">
-			<button class="btn btn-outline-success my-2 my-sm-0"
-			 type="submit">Search</button>
-		</form> -->
+		<a routerLink="/auth"
+			><button class="btn btn-outline-light my-2 my-sm-0">
+				Sign up / Log in
+			</button></a
+		>
+		<a routerLink="/user/profile"
+			><button class="btn btn-outline-info my-2 my-sm-0">
+				Profile
+			</button></a
+		>
+		<a routerLink="/auth/logout"
+			><button class="btn btn-outline-danger my-2 my-sm-0">
+				Log out
+			</button></a
+		>
 	</div>
 </nav>
