--- a/src/app/areas/user-list/user-list.component.html
+++ b/src/app/areas/user-list/user-list.component.html
@@ -1,1 +1,353 @@
-<p>user-list works!</p>
+<section>
+	<h2>User list</h2>
+	<div class="card-columns">
+		<div class="card text-white bg-dark mb-3">
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<img
+						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+						class="card-img"
+						alt="..."
+					/>
+				</div>
+				<h5 class="card-body">Deez Nuts</h5>
+			</div>
+		</div>
+		<div class="card text-white bg-dark mb-3">
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<img
+						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+						class="card-img"
+						alt="..."
+					/>
+				</div>
+				<h5 class="card-body">Deez Nuts</h5>
+			</div>
+		</div>
+		<div class="card text-white bg-dark mb-3">
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<img
+						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+						class="card-img"
+						alt="..."
+					/>
+				</div>
+				<h5 class="card-body">Deez Nuts</h5>
+			</div>
+		</div>
+		<div class="card text-white bg-dark mb-3">
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<img
+						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+						class="card-img"
+						alt="..."
+					/>
+				</div>
+				<h5 class="card-body">Deez Nuts</h5>
+			</div>
+		</div>
+		<div class="card text-white bg-dark mb-3">
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<img
+						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+						class="card-img"
+						alt="..."
+					/>
+				</div>
+				<h5 class="card-body">Deez Nuts</h5>
+			</div>
+		</div>
+		<div class="card text-white bg-dark mb-3">
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<img
+						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+						class="card-img"
+						alt="..."
+					/>
+				</div>
+				<h5 class="card-body">Deez Nuts</h5>
+			</div>
+		</div>
+		<div class="card text-white bg-dark mb-3">
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<img
+						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+						class="card-img"
+						alt="..."
+					/>
+				</div>
+				<h5 class="card-body">Deez Nuts</h5>
+			</div>
+		</div>
+		<div class="card text-white bg-dark mb-3">
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<img
+						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+						class="card-img"
+						alt="..."
+					/>
+				</div>
+				<h5 class="card-body">Deez Nuts</h5>
+			</div>
+		</div>
+		<div class="card text-white bg-dark mb-3">
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<img
+						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+						class="card-img"
+						alt="..."
+					/>
+				</div>
+				<h5 class="card-body">Deez Nuts</h5>
+			</div>
+		</div>
+		<div class="card text-white bg-dark mb-3">
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<img
+						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+						class="card-img"
+						alt="..."
+					/>
+				</div>
+				<h5 class="card-body">Deez Nuts</h5>
+			</div>
+		</div>
+		<div class="card text-white bg-dark mb-3">
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<img
+						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+						class="card-img"
+						alt="..."
+					/>
+				</div>
+				<h5 class="card-body">Deez Nuts</h5>
+			</div>
+		</div>
+		<div class="card text-white bg-dark mb-3">
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<img
+						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+						class="card-img"
+						alt="..."
+					/>
+				</div>
+				<h5 class="card-body">Deez Nuts</h5>
+			</div>
+		</div>
+		<div class="card text-white bg-dark mb-3">
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<img
+						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+						class="card-img"
+						alt="..."
+					/>
+				</div>
+				<h5 class="card-body">Deez Nuts</h5>
+			</div>
+		</div>
+		<div class="card text-white bg-dark mb-3">
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<img
+						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+						class="card-img"
+						alt="..."
+					/>
+				</div>
+				<h5 class="card-body">Deez Nuts</h5>
+			</div>
+		</div>
+		<div class="card text-white bg-dark mb-3">
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<img
+						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+						class="card-img"
+						alt="..."
+					/>
+				</div>
+				<h5 class="card-body">Deez Nuts</h5>
+			</div>
+		</div>
+		<div class="card text-white bg-dark mb-3">
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<img
+						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+						class="card-img"
+						alt="..."
+					/>
+				</div>
+				<h5 class="card-body">Deez Nuts</h5>
+			</div>
+		</div>
+		<div class="card text-white bg-dark mb-3">
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<img
+						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+						class="card-img"
+						alt="..."
+					/>
+				</div>
+				<h5 class="card-body">Deez Nuts</h5>
+			</div>
+		</div>
+		<div class="card text-white bg-dark mb-3">
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<img
+						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+						class="card-img"
+						alt="..."
+					/>
+				</div>
+				<h5 class="card-body">Deez Nuts</h5>
+			</div>
+		</div>
+		<div class="card text-white bg-dark mb-3">
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<img
+						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+						class="card-img"
+						alt="..."
+					/>
+				</div>
+				<h5 class="card-body">Deez Nuts</h5>
+			</div>
+		</div>
+		<div class="card text-white bg-dark mb-3">
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<img
+						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+						class="card-img"
+						alt="..."
+					/>
+				</div>
+				<h5 class="card-body">Deez Nuts</h5>
+			</div>
+		</div>
+		<div class="card text-white bg-dark mb-3">
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<img
+						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+						class="card-img"
+						alt="..."
+					/>
+				</div>
+				<h5 class="card-body">Deez Nuts</h5>
+			</div>
+		</div>
+		<div class="card text-white bg-dark mb-3">
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<img
+						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+						class="card-img"
+						alt="..."
+					/>
+				</div>
+				<h5 class="card-body">Deez Nuts</h5>
+			</div>
+		</div>
+		<div class="card text-white bg-dark mb-3">
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<img
+						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+						class="card-img"
+						alt="..."
+					/>
+				</div>
+				<h5 class="card-body">Deez Nuts</h5>
+			</div>
+		</div>
+		<div class="card text-white bg-dark mb-3">
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<img
+						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+						class="card-img"
+						alt="..."
+					/>
+				</div>
+				<h5 class="card-body">Deez Nuts</h5>
+			</div>
+		</div>
+		<div class="card text-white bg-dark mb-3">
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<img
+						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+						class="card-img"
+						alt="..."
+					/>
+				</div>
+				<h5 class="card-body">Deez Nuts</h5>
+			</div>
+		</div>
+		<div class="card text-white bg-dark mb-3">
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<img
+						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+						class="card-img"
+						alt="..."
+					/>
+				</div>
+				<h5 class="card-body">Deez Nuts</h5>
+			</div>
+		</div>
+		<div class="card text-white bg-dark mb-3">
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<img
+						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+						class="card-img"
+						alt="..."
+					/>
+				</div>
+				<h5 class="card-body">Deez Nuts</h5>
+			</div>
+		</div>
+		<div class="card text-white bg-dark mb-3">
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<img
+						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+						class="card-img"
+						alt="..."
+					/>
+				</div>
+				<h5 class="card-body">Deez Nuts</h5>
+			</div>
+		</div>
+		<div class="card text-white bg-dark mb-3">
+			<div class="row no-gutters">
+				<div class="col-md-4">
+					<img
+						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+						class="card-img"
+						alt="..."
+					/>
+				</div>
+				<h5 class="card-body">Deez Nuts</h5>
+			</div>
+		</div>
+	</div>
+</section>
