--- a/src/app/areas/article-add/article-add.component.html
+++ b/src/app/areas/article-add/article-add.component.html
@@ -1,1 +1,31 @@
-<p>article-add works!</p>
+<section>
+	<h2>Add an article</h2>
+	<form class="card text-white bg-dark mb-3">
+		<div class="form-group">
+			<label for="title">Article title</label>
+			<input
+				id="title"
+				name="title"
+				type="text"
+				required="required"
+				class="form-control"
+			/>
+		</div>
+		<div class="form-group">
+			<label for="content">Article content</label>
+			<textarea
+				id="content"
+				name="content"
+				cols="40"
+				rows="5"
+				class="form-control"
+				required="required"
+			></textarea>
+		</div>
+		<div class="form-group">
+			<button name="submit" type="submit" class="btn btn-primary">
+				Add article
+			</button>
+		</div>
+	</form>
+</section>
