--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
 </main>
 <footer>
 	<div class="container">
-		<p>
+		<p *ngIf="!auth.loggedIn; else loggedUser">
 			&copy; Made with <i class="fa fa-heart" aria-hidden="true"></i>️ by
 			<strong>
 				<a
@@ -16,5 +16,9 @@
 			</strong>
 			2022.
 		</p>
+		<ng-template #loggedUser
+			><p>Connected as {{ auth.currentUser.email }}</p></ng-template
+		>
+		<!--TODO change this-->
 	</div>
 </footer>
