--- a/src/app/areas/article-add/article-add.component.html
+++ b/src/app/areas/article-add/article-add.component.html
@@ -1,8 +1,8 @@
 <section>
 	<h2>Add an article</h2>
-	<form class="card text-white bg-dark mb-3">
+	<form class="card mb-3">
 		<div class="form-group">
-			<label for="title">Article title</label>
+			<label for="title" class="text-dark">Article title</label>
 			<input
 				id="title"
 				name="title"
@@ -12,7 +12,7 @@
 			/>
 		</div>
 		<div class="form-group">
-			<label for="content">Article content</label>
+			<label for="content" class="text-dark">Article content</label>
 			<textarea
 				id="content"
 				name="content"
