feat: Design the article list page

--- a/src/app/areas/article-list/article-list.component.html
+++ b/src/app/areas/article-list/article-list.component.html
@@ -1,1 +1,222 @@
-<p>article-list works!</p>
+<section>
+	<h2>Article list</h2>
+	<div class="card text-dark mb-3">
+		<div class="card-header">
+			<h5 class="title text-dark">Article title</h5>
+			- agerard57
+		</div>
+		<div class="card-body">
+			<p class="card-text">
+				This article is the best one I've ever made, if you want to know
+				why, don't question me, it just is...
+			</p>
+			<a href="#" class="card-link">View article</a>
+		</div>
+		<ul class="list-group list-group-flush">
+			<h6 class="card-header text-dark">Comments</h6>
+			<li class="list-group-item">
+				<form class="input-group">
+					<input
+						type="text"
+						class="form-control"
+						name="comment"
+						placeholder="Add a comment..."
+					/>
+					<span class="input-group-btn">
+						<button class="btn btn-default" type="button">
+							Comment
+						</button>
+					</span>
+				</form>
+			</li>
+			<li class="list-group-item">
+				Dapibus ac facilisis in
+				<footer class="blockquote-footer">
+					<cite>npoire13</cite>
+				</footer>
+			</li>
+			<li class="list-group-item">
+				Dapibus ac facilisis in
+				<footer class="blockquote-footer">
+					<cite>npoire13</cite>
+				</footer>
+			</li>
+			<li class="list-group-item">
+				Dapibus ac facilisis in
+				<footer class="blockquote-footer">
+					<cite>npoire13</cite>
+				</footer>
+			</li>
+		</ul>
+	</div>
+	<div class="card text-dark">
+		<div class="card-header">
+			<h5 class="title text-dark">Article title</h5>
+			- agerard57
+		</div>
+		<div class="card-body">
+			<p class="card-text">
+				This article is the best one I've ever made, if you want to know
+				why, don't question me, it just is...
+			</p>
+			<a href="#" class="card-link">View article</a>
+		</div>
+		<ul class="list-group list-group-flush">
+			<h6 class="card-header text-dark">Comments</h6>
+			<li class="list-group-item">
+				<form class="input-group">
+					<input
+						type="text"
+						class="form-control"
+						name="comment"
+						placeholder="Add a comment..."
+					/>
+					<span class="input-group-btn">
+						<button class="btn btn-default" type="button">
+							Comment
+						</button>
+					</span>
+				</form>
+			</li>
+			<li class="list-group-item">
+				Dapibus ac facilisis in
+				<footer class="blockquote-footer">
+					<cite>npoire13</cite>
+				</footer>
+			</li>
+			<li class="list-group-item">
+				Dapibus ac facilisis in
+				<footer class="blockquote-footer">
+					<cite>npoire13</cite>
+				</footer>
+			</li>
+			<li class="list-group-item">
+				Dapibus ac facilisis in
+				<footer class="blockquote-footer">
+					<cite>npoire13</cite>
+				</footer>
+			</li>
+		</ul>
+	</div>
+	<div class="card text-dark">
+		<div class="card-header">
+			<h5 class="title text-dark">Article title</h5>
+			- agerard57
+		</div>
+		<div class="card-body">
+			<p class="card-text">
+				This article is the best one I've ever made, if you want to know
+				why, don't question me, it just is...
+			</p>
+			<a href="#" class="card-link">View article</a>
+		</div>
+		<ul class="list-group list-group-flush">
+			<h6 class="card-header text-dark">Comments</h6>
+			<li class="list-group-item">
+				<form class="input-group">
+					<input
+						type="text"
+						class="form-control"
+						name="comment"
+						placeholder="Add a comment..."
+					/>
+					<span class="input-group-btn">
+						<button class="btn btn-default" type="button">
+							Comment
+						</button>
+					</span>
+				</form>
+			</li>
+			<li class="list-group-item">
+				Dapibus ac facilisis in
+				<footer class="blockquote-footer">
+					<cite>npoire13</cite>
+				</footer>
+			</li>
+			<li class="list-group-item">
+				Dapibus ac facilisis in
+				<footer class="blockquote-footer">
+					<cite>npoire13</cite>
+				</footer>
+			</li>
+			<li class="list-group-item">
+				Dapibus ac facilisis in
+				<footer class="blockquote-footer">
+					<cite>npoire13</cite>
+				</footer>
+			</li>
+		</ul>
+	</div>
+</section>
+
+<!-- Single article
+    <div class="card text-center">
+  <div class="card-header">
+    <ul class="nav nav-tabs card-header-tabs">
+      <li class="nav-item">
+        <a class="nav-link active" href="#">Active</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>
+    </ul>
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Special title treatment</h5>
+    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div> -->
+
+<!-- <div class="card text-dark mb-3">
+		<div class="card-header">
+			<h5 class="title text-dark">Article title</h5>
+			- agerard57
+		</div>
+		<div class="card-body">
+			<p class="card-text">
+				This article is the best one I've ever made, if you want to know
+				why, don't question me, it just is...
+			</p>
+			<a href="#" class="card-link">View article</a>
+		</div>
+		<ul class="list-group list-group-flush">
+			<h6 class="card-header text-dark">Comments</h6>
+			<li class="list-group-item">
+				<form class="input-group">
+					<input
+						type="text"
+						class="form-control"
+						name="comment"
+						placeholder="Add a comment..."
+					/>
+					<span class="input-group-btn">
+						<button class="btn btn-default" type="button">
+							Comment
+						</button>
+					</span>
+				</form>
+			</li>
+			<li class="list-group-item">
+				Dapibus ac facilisis in
+				<footer class="blockquote-footer">
+					<cite>npoire13</cite>
+				</footer>
+			</li>
+			<li class="list-group-item">
+				Dapibus ac facilisis in
+				<footer class="blockquote-footer">
+					<cite>npoire13</cite>
+				</footer>
+			</li>
+			<li class="list-group-item">
+				Dapibus ac facilisis in
+				<footer class="blockquote-footer">
+					<cite>npoire13</cite>
+				</footer>
+			</li>
+		</ul>
+	</div> -->
