--- a/src/app/areas/user-list/user-list.component.html
+++ b/src/app/areas/user-list/user-list.component.html
@@ -1,352 +1,21 @@
 <section>
 	<h2>User list</h2>
 	<div class="card-columns">
-		<div class="card text-white bg-dark mb-3">
+		<div
+			class="card text-white bg-dark mb-3"
+			*ngFor="let user of users; index as i"
+			[routerLink]="['/user', user.id]"
+		>
 			<div class="row no-gutters">
 				<div class="col-md-4">
 					<img
-						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
+						src="{{ user.avatar }}"
+						(error)="onImgError($event)"
 						class="card-img"
-						alt="..."
+						alt="profile picture {{ user.id }}"
 					/>
 				</div>
-				<h5 class="card-body">Deez Nuts</h5>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-					<img
-						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
-						class="card-img"
-						alt="..."
-					/>
-				</div>
-				<h5 class="card-body">Deez Nuts</h5>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-					<img
-						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
-						class="card-img"
-						alt="..."
-					/>
-				</div>
-				<h5 class="card-body">Deez Nuts</h5>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-					<img
-						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
-						class="card-img"
-						alt="..."
-					/>
-				</div>
-				<h5 class="card-body">Deez Nuts</h5>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-					<img
-						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
-						class="card-img"
-						alt="..."
-					/>
-				</div>
-				<h5 class="card-body">Deez Nuts</h5>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-					<img
-						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
-						class="card-img"
-						alt="..."
-					/>
-				</div>
-				<h5 class="card-body">Deez Nuts</h5>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-					<img
-						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
-						class="card-img"
-						alt="..."
-					/>
-				</div>
-				<h5 class="card-body">Deez Nuts</h5>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-					<img
-						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
-						class="card-img"
-						alt="..."
-					/>
-				</div>
-				<h5 class="card-body">Deez Nuts</h5>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-					<img
-						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
-						class="card-img"
-						alt="..."
-					/>
-				</div>
-				<h5 class="card-body">Deez Nuts</h5>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-					<img
-						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
-						class="card-img"
-						alt="..."
-					/>
-				</div>
-				<h5 class="card-body">Deez Nuts</h5>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-					<img
-						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
-						class="card-img"
-						alt="..."
-					/>
-				</div>
-				<h5 class="card-body">Deez Nuts</h5>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-					<img
-						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
-						class="card-img"
-						alt="..."
-					/>
-				</div>
-				<h5 class="card-body">Deez Nuts</h5>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-					<img
-						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
-						class="card-img"
-						alt="..."
-					/>
-				</div>
-				<h5 class="card-body">Deez Nuts</h5>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-					<img
-						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
-						class="card-img"
-						alt="..."
-					/>
-				</div>
-				<h5 class="card-body">Deez Nuts</h5>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-					<img
-						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
-						class="card-img"
-						alt="..."
-					/>
-				</div>
-				<h5 class="card-body">Deez Nuts</h5>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-					<img
-						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
-						class="card-img"
-						alt="..."
-					/>
-				</div>
-				<h5 class="card-body">Deez Nuts</h5>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-					<img
-						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
-						class="card-img"
-						alt="..."
-					/>
-				</div>
-				<h5 class="card-body">Deez Nuts</h5>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-					<img
-						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
-						class="card-img"
-						alt="..."
-					/>
-				</div>
-				<h5 class="card-body">Deez Nuts</h5>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-					<img
-						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
-						class="card-img"
-						alt="..."
-					/>
-				</div>
-				<h5 class="card-body">Deez Nuts</h5>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-					<img
-						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
-						class="card-img"
-						alt="..."
-					/>
-				</div>
-				<h5 class="card-body">Deez Nuts</h5>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-					<img
-						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
-						class="card-img"
-						alt="..."
-					/>
-				</div>
-				<h5 class="card-body">Deez Nuts</h5>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-					<img
-						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
-						class="card-img"
-						alt="..."
-					/>
-				</div>
-				<h5 class="card-body">Deez Nuts</h5>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-					<img
-						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
-						class="card-img"
-						alt="..."
-					/>
-				</div>
-				<h5 class="card-body">Deez Nuts</h5>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-					<img
-						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
-						class="card-img"
-						alt="..."
-					/>
-				</div>
-				<h5 class="card-body">Deez Nuts</h5>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-					<img
-						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
-						class="card-img"
-						alt="..."
-					/>
-				</div>
-				<h5 class="card-body">Deez Nuts</h5>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-					<img
-						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
-						class="card-img"
-						alt="..."
-					/>
-				</div>
-				<h5 class="card-body">Deez Nuts</h5>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-					<img
-						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
-						class="card-img"
-						alt="..."
-					/>
-				</div>
-				<h5 class="card-body">Deez Nuts</h5>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-					<img
-						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
-						class="card-img"
-						alt="..."
-					/>
-				</div>
-				<h5 class="card-body">Deez Nuts</h5>
-			</div>
-		</div>
-		<div class="card text-white bg-dark mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-					<img
-						src="https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460__340.png"
-						class="card-img"
-						alt="..."
-					/>
-				</div>
-				<h5 class="card-body">Deez Nuts</h5>
+				<h5 class="card-body">{{ user.pseudo }}</h5>
 			</div>
 		</div>
 	</div>
