feat: Change to username

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
 			2022.
 		</p>
 		<ng-template #loggedUser
-			><p>Connected as {{ auth.currentUser.email }}</p></ng-template
+			><p>Connected as {{ auth.currentUser.pseudo }}</p></ng-template
 		>
 		<!--TODO change this-->
 	</div>
