feat: Article-list

--- a/src/app/areas/article-list/article-list.component.html
+++ b/src/app/areas/article-list/article-list.component.html
@@ -1,117 +1,18 @@
 <section>
 	<h2>Article list</h2>
-	<div class="card text-dark mb-3">
+	<div class="card text-dark mb-3" *ngFor="let article of articles; index as i">
 		<div class="card-header">
-			<h5 class="title text-dark">Article title</h5>
+			<h5 class="title text-dark">{{article.titre}}</h5>
 			- agerard57
 		</div>
 		<div class="card-body">
 			<p class="card-text">
-				This article is the best one I've ever made, if you want to know
-				why, don't question me, it just is...
+				{{article.contenu | truncate : 200 }}
 			</p>
-			<a href="#" class="card-link">View article</a>
+			<a href="" [routerLink]="['/article', article.id_article]" class="card-link">View article</a>
 		</div>
 		<ul class="list-group list-group-flush">
-			<h6 class="card-header text-dark">Comments</h6>
-			<li class="list-group-item">
-				<form class="input-group">
-					<input
-						type="text"
-						class="form-control"
-						name="comment"
-						placeholder="Add a comment..."
-					/>
-					<span class="input-group-btn">
-						<button class="btn btn-default" type="button">
-							Comment
-						</button>
-					</span>
-				</form>
-			</li>
-			<li class="list-group-item">
-				Dapibus ac facilisis in
-				<footer class="blockquote-footer">
-					<cite>npoire13</cite>
-				</footer>
-			</li>
-			<li class="list-group-item">
-				Dapibus ac facilisis in
-				<footer class="blockquote-footer">
-					<cite>npoire13</cite>
-				</footer>
-			</li>
-			<li class="list-group-item">
-				Dapibus ac facilisis in
-				<footer class="blockquote-footer">
-					<cite>npoire13</cite>
-				</footer>
-			</li>
-		</ul>
-	</div>
-	<div class="card text-dark">
-		<div class="card-header">
-			<h5 class="title text-dark">Article title</h5>
-			- agerard57
-		</div>
-		<div class="card-body">
-			<p class="card-text">
-				This article is the best one I've ever made, if you want to know
-				why, don't question me, it just is...
-			</p>
-			<a href="#" class="card-link">View article</a>
-		</div>
-		<ul class="list-group list-group-flush">
-			<h6 class="card-header text-dark">Comments</h6>
-			<li class="list-group-item">
-				<form class="input-group">
-					<input
-						type="text"
-						class="form-control"
-						name="comment"
-						placeholder="Add a comment..."
-					/>
-					<span class="input-group-btn">
-						<button class="btn btn-default" type="button">
-							Comment
-						</button>
-					</span>
-				</form>
-			</li>
-			<li class="list-group-item">
-				Dapibus ac facilisis in
-				<footer class="blockquote-footer">
-					<cite>npoire13</cite>
-				</footer>
-			</li>
-			<li class="list-group-item">
-				Dapibus ac facilisis in
-				<footer class="blockquote-footer">
-					<cite>npoire13</cite>
-				</footer>
-			</li>
-			<li class="list-group-item">
-				Dapibus ac facilisis in
-				<footer class="blockquote-footer">
-					<cite>npoire13</cite>
-				</footer>
-			</li>
-		</ul>
-	</div>
-	<div class="card text-dark">
-		<div class="card-header">
-			<h5 class="title text-dark">Article title</h5>
-			- agerard57
-		</div>
-		<div class="card-body">
-			<p class="card-text">
-				This article is the best one I've ever made, if you want to know
-				why, don't question me, it just is...
-			</p>
-			<a href="#" class="card-link">View article</a>
-		</div>
-		<ul class="list-group list-group-flush">
-			<h6 class="card-header text-dark">Comments</h6>
+			<h6 class="card-header text-dark">Comments (20)</h6>
 			<li class="list-group-item">
 				<form class="input-group">
 					<input
