--- a/src/app/areas/home/home.component.html
+++ b/src/app/areas/home/home.component.html
@@ -11,7 +11,7 @@
 </span>
 <ng-template #loggedMessage
 	><span>
-		<h3>Welcome back, {{ auth.currentUser.email }}!</h3>
+		<h3>Welcome back, {{ auth.currentUser.pseudo }}!</h3>
 		<p>See all the articles <a routerLink="/article/list">here</a></p>
 	</span>
 </ng-template>
