--- a/src/app/areas/nav/nav.component.html
+++ b/src/app/areas/nav/nav.component.html
@@ -43,7 +43,7 @@
 				Log in
 			</button></a
 		>
-		<a routerLink="/user/profile" *ngIf="auth.loggedIn"
+		<a [routerLink]="['/user',this.id]" *ngIf="auth.loggedIn"
 			><button class="btn btn-outline-info my-2 my-sm-0">
 				Profile
 			</button></a
