--- a/src/app/areas/user-profile/user-profile.component.html
+++ b/src/app/areas/user-profile/user-profile.component.html
@@ -5,13 +5,14 @@
 			<div class="card-body">
 				<div class="d-flex flex-column align-items-center text-center">
 					<img
-						src="https://bootdey.com/img/Content/avatar/avatar7.png"
+						src={{user.avatar}}
+						(error)="onImgError($event)"
 						alt="userImg"
 						class="rounded-circle"
 						width="150"
 					/>
 					<div class="mt-3">
-						<h4 class="text-dark">agerard57</h4>
+						<h4 class="text-dark">{{user.pseudo}}</h4>
 					</div>
 				</div>
 			</div>
@@ -41,7 +42,7 @@
 							></path></svg
 						>Email
 					</h6>
-					<span class="text-secondary">agerard57@protonmail.com</span>
+					<span class="text-secondary">{{user.email}}</span>
 				</li>
 			</ul>
 		</div>
@@ -51,9 +52,9 @@
 			<div class="card-body">
 				<div class="row">
 					<div class="col-sm-3">
-						<h6 class="mb-0 text-secondary">Full Name</h6>
+						<h6 class="mb-0 text-secondary">Username</h6>
 					</div>
-					<div class="col-sm-9 text-dark">agerard57</div>
+					<div class="col-sm-9 text-dark">{{user.pseudo}}</div>
 				</div>
 				<hr />
 				<div class="row">
@@ -61,7 +62,7 @@
 						<h6 class="mb-0 text-secondary">Email</h6>
 					</div>
 					<div class="col-sm-9 text-dark">
-						agerard57@protonmail.com
+						{{user.email}}
 					</div>
 				</div>
 				<hr />
@@ -91,26 +92,12 @@
 							>
 						</h6>
 					</div>
-					<div class="card-body">
-						<div class="row">
+					<div class="card-body" *ngFor="let article of articles; index as i">
+						<div class="row" >
 							<h6 class="mb-0">
-								<a class="link-secondary" href=""
-									>Lorem ipsum</a
+								<a class="link-secondary" href="" [routerLink]="['/article',article.id_article]"
+									>{{article.titre}}</a
 								>
-							</h6>
-						</div>
-						<hr />
-						<div class="row">
-							<h6 class="mb-0">
-								<a class="link-secondary" href=""
-									>Sit dolores</a
-								>
-							</h6>
-						</div>
-						<hr />
-						<div class="row">
-							<h6 class="mb-0">
-								<a class="link-secondary" href="">Deez nuts</a>
 							</h6>
 						</div>
 					</div>
@@ -125,35 +112,15 @@
 							>
 						</h6>
 					</div>
-					<div class="card-body">
+					<div class="card-body" *ngFor="let comment of comments; index as i">
 						<div class="row">
-							<footer class="blockquote-footer">
+							<span class="blockquote-footer" class="mb-0">
 								<cite
-									><a class="link-secondary" href=""
-										>"Hahaha very fun :)"</a
+									><a class="link-secondary" href="" [routerLink]="['/article',comment.id_article]"
+										>"{{comment.contenu}}"</a
 									></cite
 								>
-							</footer>
-						</div>
-						<hr />
-						<div class="row">
-							<footer class="blockquote-footer">
-								<cite
-									><a class="link-secondary" href=""
-										>"What?? Why tho"</a
-									></cite
-								>
-							</footer>
-						</div>
-						<hr />
-						<div class="row">
-							<footer class="blockquote-footer">
-								<cite
-									><a class="link-secondary" href=""
-										>"I like this a lot"</a
-									></cite
-								>
-							</footer>
+							</span>
 						</div>
 					</div>
 				</div>
