--- a/src/app/areas/article-view/article-view.component.scss
+++ b/src/app/areas/article-view/article-view.component.scss
@@ -1,3 +1,9 @@
-.card {
-    padding: 2%;
+.title {
+    font-weight: bold;
+    display: contents;
+    text-transform: capitalize;
+}
+
+.card-link{
+    cursor: pointer;
 }
