--- a/src/app/areas/article-view/article-view.component.html
+++ b/src/app/areas/article-view/article-view.component.html
@@ -2,40 +2,61 @@
 	<h2>Article</h2>
 	<div class="card text-dark mb-3">
 		<div class="card-header">
-			<h5 class="title text-dark">{{article.titre | empty}}</h5> - {{article.id}}
+			<h5 class="title text-dark">{{ article.titre | empty }}</h5>
+			- {{ authorUsername }}
 		</div>
 		<div class="card-body">
 			<p class="card-text">
-				{{article.contenu | empty}}
+				{{ article.contenu | empty }}
 			</p>
 		</div>
-		<div class="card-footer blockquote-footer">{{article.creation | date}}</div></div>	
-		<h2>Comments</h2>
+		<div class="card-footer blockquote-footer">
+			{{ article.creation | date }}
+		</div>
+	</div>
+	<h2>Comments ({{ comments.length }})</h2>
 
-		<div class="card text-dark mb-3">
+	<div class="card text-dark mb-3">
 		<ul class="list-group list-group-flush">
 			<li class="list-group-item">
-				<form class="input-group">
+				<form
+					class="input-group"
+					[formGroup]="commentForm"
+					(ngSubmit)="addComment()"
+				>
 					<input
 						type="text"
 						class="form-control"
-						name="comment"
+						id="contenu"
+						name="contenu"
+						formControlName="contenu"
+						required="required"
 						placeholder="Add a comment..."
+						maxlength="150"
 					/>
 					<span class="input-group-btn">
-						<button class="btn btn-default" type="button">
+						<button
+							class="btn btn-default"
+							type="submit"
+							[disabled]="!commentForm.valid"
+						>
 							Comment
 						</button>
 					</span>
+					<p class="text-secondary">
+						({{ contenu.value | length }}/150)
+					</p>
 				</form>
 			</li>
-			<li class="list-group-item" *ngFor="let comment of comments;">
-				{{comment.contenu | empty}}
+			<li class="list-group-item" *ngFor="let comment of comments">
+				{{ comment.contenu | empty }}
 				<footer class="blockquote-footer">
-					<cite>{{comment.id}}</cite>
+					<cite [routerLink]="['/user', comment.id]">{{
+						findUsername(comment.id) | empty
+					}}</cite>
 				</footer>
 			</li>
 		</ul>
 	</div>
-	<a class="card-link" (click)="back()" >Go back</a>
+	<a class="card-link" (click)="back()">Go back</a>
 </section>
