feat: Add toaster

--- a/src/app/areas/article-list/article-list.component.html
+++ b/src/app/areas/article-list/article-list.component.html
@@ -1,3 +1,5 @@
+<app-toast [message]="toast.message"></app-toast>
+
 <section>
 	<h2>Article list</h2>
 	<div class="card text-dark mb-3" *ngFor="let article of articles">
