--- a/src/app/areas/article-add/article-add.component.html
+++ b/src/app/areas/article-add/article-add.component.html
@@ -1,3 +1,5 @@
+<app-toast [message]="toast.message"></app-toast>
+
 <section>
 	<h2>Add an article</h2>
 	<form class="card mb-3" [formGroup]="articleForm" (ngSubmit)="addArticle()">
