--- a/src/app/areas/user-profile/user-profile.component.html
+++ b/src/app/areas/user-profile/user-profile.component.html
@@ -1,3 +1,5 @@
+<app-toast [message]="toast.message"></app-toast>
+
 <h2>User profile</h2>
 <section class="row gutters-sm">
 	<div class="col-md-4 mb-3">
@@ -78,7 +80,7 @@
 				<div class="row">
 					<div class="col-sm-12 btn-group" *ngIf="isCurrentUser()">
 						<a class="btn btn-info" href="">Edit profile</a>
-						<a class="btn btn-danger" href="">Delete profile</a>
+						<a class="btn btn-danger" (click)="deleteProfile()">Delete profile</a>
 					</div>
 				</div>
 			</div>
