--- a/src/app/areas/user-profile/user-profile.component.html
+++ b/src/app/areas/user-profile/user-profile.component.html
@@ -22,7 +22,13 @@
 		<div class="card mt-3">
 			<ul class="list-group list-group-flush">
 				<li
-					class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
+					class="
+						list-group-item
+						d-flex
+						justify-content-between
+						align-items-center
+						flex-wrap
+					"
 				>
 					<h6 class="mb-0 text-dark">
 						<svg
@@ -50,7 +56,7 @@
 		</div>
 	</div>
 	<div class="col-md-8">
-		<div class="card mb-3">
+		<div class="card mb-3" *ngIf="!editMode">
 			<div class="card-body">
 				<div class="row">
 					<div class="col-sm-3">
@@ -76,15 +82,36 @@
 					</div>
 					<div class="col-sm-9 text-dark">*********</div>
 				</div>
+				<hr />
+				<div class="row">
+					<div class="col-sm-3">
+						<h6 class="mb-0 text-secondary">Avatar URL</h6>
+					</div>
+					<div class="col-sm-9 text-dark">
+						{{ user.avatar | empty }}
+					</div>
+				</div>
 				<hr *ngIf="isCurrentUser()" />
 				<div class="row">
 					<div class="col-sm-12 btn-group" *ngIf="isCurrentUser()">
-						<a class="btn btn-info" href="">Edit profile</a>
-						<a class="btn btn-danger" (click)="deleteProfile()">Delete profile</a>
+						<a class="btn btn-info" (click)="editModeToggle()"
+							>Edit profile</a
+						>
+						<a class="btn btn-danger" (click)="deleteProfile()"
+							>Delete profile</a
+						>
 					</div>
 				</div>
 			</div>
 		</div>
+		<app-user-profile-edit
+			*ngIf="editMode"
+			[userAvatar]="user.avatar"
+			[userPseudo]="user.pseudo"
+			[userEmail]="user.email"
+			(toggle)="editMode = $event"
+		>
+		</app-user-profile-edit>
 
 		<div class="row gutters-sm">
 			<div class="col-sm-6 mb-3">
